# SyPr-SFTR

./: README.md
SyPr-SFTR/: client.py  example_usage.py  organize.py  pyproject.toml  requirements.txt  run_federated.py  setup.py  train_federated.py
SyPr-SFTR/src/: __init__.py  transformer.txt
SyPr-SFTR/src/syprsftr/: __init__.py  cli.py
SyPr-SFTR/src/syprsftr/federated/: __init__.py
SyPr-SFTR/src/syprsftr/models/: transformer.py
SyPr-SFTR/src/syprsftr/probabilistic/: __init__.py
SyPr-SFTR/src/syprsftr/self_supervised/: __init__.py
SyPr-SFTR/src/syprsftr/symbolic/: __init__.py
SyPr-SFTR/tests/: test_architecture.py
